# reorder_editable

./: README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yaml  tests.yaml
reorder_easy_install/: __init__.py  __main__.py  common.py  core.py
reorder_editable/: __init__.py  __main__.py  core.py
tests/: broken.pth  fixed.pth  test_reorder_easy_install.py  test_reorder_editable.py
